sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (t=0) {
        ^